Fixed an issue with the h1 styling being too tall

--- a/Public/styles.css
+++ b/Public/styles.css
@@ -40,7 +40,7 @@ h1 {
   padding-left: 30px;
   padding-right: 30px;
   width: fit-content;
-  height: 90px;
+  height: 65px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
